// adapted from https://source.chromium.org/chromium/chromium/src/+/master:third_party/openscreen/src/cast/common/channel/proto/cast_channel.proto
syntax = "proto2";
package com.jyuzawa.googolplex_theater.protobuf;
message CastMessage {
	enum ProtocolVersion {
		CASTV2_1_0 = 0;
		CASTV2_1_1 = 1;
		CASTV2_1_2 = 2;
		CASTV2_1_3 = 3;
		CASTV2_1_4 = 4;
		CASTV2_1_5 = 5;
		CASTV2_1_6 = 6;
		CASTV2_1_7 = 7;
		CASTV2_1_8 = 8;
		CASTV2_1_9 = 9;
	}
	enum PayloadType {
		STRING = 0;
		BINARY = 1;
	}
	optional ProtocolVersion protocol_version = 1;
	optional string source_id = 2;
	optional string destination_id = 3;
	optional string namespace = 4;
	optional PayloadType payload_type = 5;
	optional string payload_utf8 = 6;
}